RS && CC | #60 | Fix status bar z-index
TODO: Remove this once we bin the side nav

--- a/resources/src/scss/modules/_status_bar.scss
+++ b/resources/src/scss/modules/_status_bar.scss
@@ -1,8 +1,10 @@
 .status-bar {
-  background: $dark_pink;
-  color: white;
+  position: relative;
+  z-index: 3;
   margin-bottom: $alpha_block_spacing;
   padding: 0.3em 1em 0.5em;
+  background: $dark_pink;
+  color: white;
   p {
     margin-top: 0;
     margin-bottom: 0;
